Fix gap between alert and hero.

--- a/legacy/hub.styl
+++ b/legacy/hub.styl
@@ -7227,9 +7227,6 @@ span.field-label+*>*:first-child,
 .page--wa {
     padding-top: 3.5rem
 }
-.page--wa .main {
-    margin-top: 2rem
-}
 .page--wa .hero-image {
     padding-top: 1rem
 }
